putting overflow hidden back on body since it's a bugfix for safari

--- a/dataviz/styles/style.css
+++ b/dataviz/styles/style.css
@@ -24,6 +24,7 @@ body,
 html {
   position: relative;
   font-family: Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 header {
